<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArtworkListView">

    <ImageButton
        android:id="@+id/pageBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/page_button_description"
        android:rotationY="0"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintEnd_toStartOf="@+id/paginationText"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="78dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/aic_logo"
        app:layout_constraintBottom_toTopOf="@+id/artworkSearchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artworkSearchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="214dp"
        android:background="@color/aic_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item" />

    <TextView
        android:id="@+id/departmentNameText"
        android:layout_width="388dp"
        android:layout_height="67dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="1dp"
        android:textColor="@color/aic_red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/artworkSearchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/pageForwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="9dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/page_button_description"
        android:rotationY="180"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paginationText"
        android:layout_width="58dp"
        android:layout_height="40dp"
        android:layout_marginTop="96dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/pageForwardButton"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>