...
        android:layout_marginBottom="1dp"
        android:text="@string/department_list_header"
        android:textColor="@color/aic_red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/departmentListView"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/departmentListView"
...
        app:layout_constraintBottom_toTopOf="@+id/departmentListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="137dp"
        android:ems="10"
        android:hint="@string/search_bar_placeholder"
...
